@@ -50,6 +50,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	removed Std.resource, Std.ord, Std.chr
 	added haxe.Resource, allow binary data in resources
 	added Type.createEnum
+	check that local variables get correctly initialized before usage
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
